Mailnagger news
===============

Version 2.3.1.dev0 (not released)
=================================

Fixes
-----

* Fixed compatibility with Python 3.10. Using importlib.resources.abc package
  requires importlib-resources, which contains backport for that.


Version 2.3.0 (2024-11-29)
==========================

Fixes
-----

* Replaced deprecated distutils with setuptools.

* Fixed subject header truncation.
  https://github.com/pulb/mailnag/issues/252

* Fixed some translatable texts.


New features
------------

* Added support to build source and wheel packages.

* Added support to install Mailnagger to virtual env.
  Mailnagger can now be installed with pipx.

* Added man pages to data files, so they are installed also.

* Added Finnish translation.


Version 2.2.1 (2024-10-16)
==========================

* Mailnag is forked. The name is changed to Mailnagger.
  (https://github.com/tikank/mailnagger/issues/1)

* setup.py updated. Hacked it to support system wide installation.

* Fixed unit tests (https://github.com/pulb/mailnag/pull/250)

* Fixed maildir bug about missing method
  (https://github.com/pulb/mailnag/pull/249 which fixes
  https://github.com/pulb/mailnag/issues/224)

* Merged Python 3.12 related issues
  (https://github.com/pulb/mailnag/pull/232 which fixes IMAP issues
  https://github.com/pulb/mailnag/issues/244 and 
  https://github.com/pulb/mailnag/issues/245)

* Translation files updated. Not much actually changed but newest
  gettext tools seems to reorder entries.


Mailnag news
============

Version 2.2.x (Not released):
=============================
* Fixed Glib exception handling in conntest
  (https://github.com/pulb/mailnag/issues/220)


Version 2.2 (2021-02-14):
=========================
* Massive robustness improvements. Especially long running IMAP IDLE 
  connections do survive peer resets and system hibernation now
* New default connectivity test based on glib NetworkMonitor 
  (likely to improve VPN issues as well)